@@ -404,14 +404,15 @@
 </tr>
 </table>
 
-<h4>Enforce limit to only GET a single association instead of using required
-parameters.</h4>
+<h4>Enforce limit to only DELETE or GET a single association instead of using
+required parameters.</h4>
 <table class="tchange">
 <tr class="trchange">
 	<td class="tdfield">changed value</td>
 	<td class="tdchange" colspan=2>
 		<ul>
 			<li>.paths."/association/".get.parameters[].required</li>
+			<li>.paths."/association/".delete.parameters[].required</li>
 		</ul>
 	</td>
 </tr>
